# event-bus

./: pyproject.toml
event_bus/: __init__.py
event_bus/abstract/: __init__.py  event.py  event_bus.py  exceptions.py
event_bus/internal/: event_bus.py
event_bus/rabbitmq/: __init__.py  event_bus.py
