[tool.poetry]
name = "event-bus"
version = "0.4.0"
description = ""
authors = ["FEFU Analytics sector"]
readme = "README.md"
packages = [{include = "event_bus"}]

[tool.poetry.dependencies]
python = "^3.10"
aio-pika = "^9.2.2"
pydantic = "1.10.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
