[tool.poetry]
name = "event-bus"
version = "0.4.1"
description = ""
authors = ["FEFU Analytics sector"]
readme = "README.md"
packages = [{include = "event_bus"}]

[tool.poetry.dependencies]
python = "^3.10"
aio-pika = "^9.0.5"
pydantic = "^1.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
